# bobo

./: Cargo.toml  FORME.md  README.md
example/: Cargo.toml
example/src/: main.rs
oop/: Cargo.toml  README.md
oop/src/: lib-old.rs  lib-old1.rs  lib.rs
src/: lib.rs  utils.rs
