[package]
name = "bobo"
version = "0.1.2"
edition = "2021"

authors = ["moluopro <moluopro@gmail.com>"]
description = "an elegant and powerful rust development tool library"
license = "Apache-2.0"
repository = "https://github.com/moluopro/bobo"
homepage = "https://github.com/moluopro/bobo"
documentation = "https://github.com/moluopro/bobo"

exclude = ["oop/"]


[dependencies]
bobo-oop = "0.1.2"
# bobo-oop = { path = "oop" }
