[package]
name = "bobo"
version = "0.1.4"
edition = "2021"

authors = ["moluopro <moluopro@gmail.com>"]
description = "an elegant utils library with oop support"
license = "Apache-2.0"
repository = "https://github.com/moluopro/bobo"
homepage = "https://github.com/moluopro/bobo"
documentation = "https://github.com/moluopro/bobo"
keywords = ["oop", "object-oriented"]

exclude = ["oop/", "example/"]


[dependencies]
bobo-oop = "0.1.4"
# bobo-oop = { path = "oop" }
