[package]
name = "bobo-oop"
version = "0.1.4"
edition = "2021"

authors = ["moluopro <moluopro@gmail.com>"]
description = "a part of bobo library about oop"
license = "Apache-2.0"
repository = "https://github.com/moluopro/bobo"
homepage = "https://github.com/moluopro/bobo"
documentation = "https://github.com/moluopro/bobo"
keywords = ["oop", "object-oriented"]


[lib]
proc-macro = true


[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
